Kubernetes/Understanding Kubernetes Probes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-probes-golang
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-probes-golang
  template:
    metadata:
      labels:
        app: k8s-probes-golang
    spec:
      containers:
      - name: k8s-probes-golang
        # image: nginxdemos/nginx-hello:plain-text
        # image: tarsoqueiroz/k8s-probes-golang:latest
        image: tarsoqueiroz/k8s-probes-golang:readiness0s
        # image: tarsoqueiroz/k8s-probes-golang:readiness10s
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
          protocol: TCP
        # livenessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 8080
        #   initialDelaySeconds: 30
        #   periodSeconds: 15
        #   failureThreshold: 3
        # readinessProbe:
        #   httpGet:
        #     path: /readyz
        #     port: 8080
        #   initialDelaySeconds: 30
        #   periodSeconds: 15
        #   failureThreshold: 3
        # startupProbe:
        #   httpGet:
        #     path: /
        #     port: 8080
        #   initialDelaySeconds: 30
        #   periodSeconds: 15
        #   failureThreshold: 30
