Kubernetes/Understanding Kubernetes Probes/probe1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-probes-golang-service
spec:
  selector:
    app: k8s-probes-golang
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  # type: NodePort
