Kubernetes/Understanding Kubernetes Probes/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: probes
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "probes.0a0f122c.nip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: k8s-probes-golang-service
      port: 80
